Formatter: Format plain numbers

Do not display plain floats, instead round them nicely for presentation
BUG:450947
FIXED-IN:5.27